Fix top button alignment

--- a/src/css/modules/_header.css
+++ b/src/css/modules/_header.css
@@ -16,7 +16,7 @@
   margin: 0;
 }
 
-.header-title {
+.header__title {
   font-weight: 600;
   margin: 5px 0 5px 12px;
   white-space: normal;
@@ -24,15 +24,15 @@
   align-self: center;
 }
 
-.header-hamburger {
+.header__hamburger {
   padding: 0 4px;
-  margin: 1.8px 20px 3px 12px;
+  margin: 17px 20px 17px 12px;
   background-color: transparent;
   font-size: 26.4px;
   line-height: inherit;
 }
 
-.header-hamburger-span {
+.header__hamburger__bar {
   background-color: var(--mainFontColor);
   display: block;
   width: 21.7px;
@@ -40,19 +40,19 @@
   margin-bottom: 4px;
 }
 
-.header-hamburger-span:first-of-type {
+.header__hamburger__bar:first-of-type {
   margin-top: 4px;
 }
 
 
 @media screen and (min-width: 1px) {
-  .header-title {
+  .header__title {
     font-size: 28.8px;
   }
 }
 
 @media screen and (min-width: 480px) {
-  .header-title {
+  .header__title {
     font-size: 32px;
   }
 }
@@ -66,7 +66,7 @@
     padding-left: 300px;
   }
 
-  .header-hamburger {
+  .header__hamburger {
     display: none;
   }
 }
@@ -78,37 +78,37 @@
 
 
 @media screen and (min-width: 960px) {
-  .header-title {
+  .header__title {
     white-space: nowrap;
   }
 }
 
 @media screen and (min-width: 1020px) {
-  .header-title {
+  .header__title {
     font-size: 35.2px;
   }
 }
 
 @media screen and (min-width: 1080px) {
-  .header-title {
+  .header__title {
     font-size: 38.4px;
   }
 }
 
 @media screen and (min-width: 1120px) {
-  .header-title {
+  .header__title {
     font-size: 40px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .header-title {
+  .header__title {
     font-size: 43.2px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .header-title {
+  .header__title {
     font-size: 46.4px;
   }
 }
